objects/Payroll__c.object
<CustomObject>
    <fields>
        <fullName>BasicSalary__c</fullName>
        <label>BasicSalary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonuses__c</fullName>
        <label>Bonuses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductions__c</fullName>
        <label>Deductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Details</label>
        <referenceTo>Employee_Details__c</referenceTo>
        <relationshipLabel>Payrolls</relationshipLabel>
        <relationshipName>Payrolls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NetPay__c</fullName>
        <label>NetPay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payroll_ID__c</fullName>
        <displayFormat>UNV-{00000}</displayFormat>
        <label>Payroll ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Payroll</label>
    <nameField>
        <label>Payroll  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payrolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>